--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,12 +1,31 @@
 <h2>Editing "<%= @post.title %>"</h2>
+  <% if @post.errors.any? %>
+    <div id="error_explanation">
+      <h3>There were some errors:</h3>
+      <ul>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
 <%= form_tag post_path(@post), method: "patch" do %>
+<% if @post.errors[:title].any?%>
+  <div class="field_with_errors">
+<%else%>
   <div class="field">
+<%end%>
     <%= label_tag "title", "Title" %>
     <%= text_field_tag "title", @post.title %>
   </div>
 
-  <div class="field">
-    <%= label_tag "category", "Category" %>
+  <% if @post.errors[:category].any?%>
+    <div class="field_with_errors">
+  <%else%>
+    <div class="field">
+  <%end%>
+  <%= label_tag "category", "Category" %>
     <p>Must be either "Fiction" or "Non-Fiction".</p>
     <%= text_field_tag "category", @post.category %>
     <p>
@@ -15,11 +34,13 @@
     </p>
   </div>
 
-  <div class="field">
-    <%= label_tag "content", "Content" %>
+  <% if @post.errors[:content].any?%>
+    <div class="field_with_errors">
+  <%else%>
+    <div class="field">
+  <%end%>    <%= label_tag "content", "Content" %>
     <br />
     <%= text_area_tag "content", @post.content %>
   </div>
   <%= submit_tag "Update" %>
 <% end %>
-
